--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ body {
 }
 
 .plusBtn {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     position: relative;
     right: -620px;
     bottom: -300px;
